--- a/test.ipynb
+++ b/test.ipynb
@@ -172,24 +172,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 2s/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 225ms/step\n",
       "The image is predicted to be Malginant.\n"
      ]
     }
    ],
    "source": [
     "# Make prediction\n",
-    "predictions = model1.predict(np.array([scaled_img_array]))\n",
+    "predictions1 = model1.predict(np.array([scaled_img_array]))\n",
     "\n",
     "# Interpret prediction\n",
-    "for pred in predictions:\n",
+    "for pred in predictions1:\n",
     "    max_index = np.argmax(pred)  # Get the index of the highest value in pred\n",
     "    if max_index == 0:\n",
     "        print(\"The image is predicted to be Bengin.\")\n",
@@ -197,6 +197,215 @@
     "        print(\"The image is predicted to be Malginant.\")\n",
     "    elif max_index == 2:\n",
     "        print(\"The image is predicted to be normal.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 5s/step\n",
+      "The image is predicted to be Malginant.\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions2 = model2.predict(np.array([scaled_img_array]))\n",
+    "\n",
+    "# Interpret prediction\n",
+    "for pred in predictions2:\n",
+    "    max_index = np.argmax(pred)  # Get the index of the highest value in pred\n",
+    "    if max_index == 0:\n",
+    "        print(\"The image is predicted to be Bengin.\")\n",
+    "    elif max_index == 1:\n",
+    "        print(\"The image is predicted to be Malginant.\")\n",
+    "    elif max_index == 2:\n",
+    "        print(\"The image is predicted to be normal.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 42ms/step\n",
+      "The image is predicted to be Malginant.\n",
+      "[0.00196059 0.73669493 0.26134452]\n",
+      "[0.0101673  0.9688399  0.02099285]\n",
+      "[2.4489721e-04 9.8109186e-01 1.8663278e-02]\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions3 = model3.predict(np.array([scaled_img_array]))\n",
+    "\n",
+    "# Interpret prediction\n",
+    "for pred in predictions3:\n",
+    "    max_index = np.argmax(pred)  # Get the index of the highest value in pred\n",
+    "    if max_index == 0:\n",
+    "        print(\"The image is predicted to be Bengin.\")\n",
+    "    elif max_index == 1:\n",
+    "        print(\"The image is predicted to be Malginant.\")\n",
+    "    elif max_index == 2:\n",
+    "        print(\"The image is predicted to be normal.\")\n",
+    "print(predictions1[0])\n",
+    "print(predictions2[0])\n",
+    "print(predictions3[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Định nghĩa một mảng NumPy toàn 0 với shape (kích thước) (n,)\n",
+    "n = 5\n",
+    "RC1 = np.zeros(3)\n",
+    "RC2 = np.zeros(3)\n",
+    "RC3 = np.zeros(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.9986401  0.33364599 0.80140478]\n",
+      "[0.99292767 0.04273394 0.98534248]\n",
+      "[0.99983024 0.02604123 0.98697956]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(RC1)):\n",
+    "    RC1[i] = 2 *(1 - pow(2,predictions1[0][i]-1))\n",
+    "    RC2[i] = 2*(1 - pow(2,predictions2[0][i]-1))\n",
+    "    RC3[i] = 2*(1 - pow(2,predictions3[0][i]-1))\n",
+    "    \n",
+    "print(RC1)\n",
+    "print(RC2)\n",
+    "print(RC3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2.991398  , 0.40242115, 2.77372683])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "FRS = np.zeros(3)\n",
+    "for i in range(len(FRS)):\n",
+    "    FRS[i] = RC1[i] + RC2[i] + RC3[i]\n",
+    "    \n",
+    "FRS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.99587574, 0.10445778, 0.89966645])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CCFS = np.zeros(3)\n",
+    "CCFS[0] = 1 - (1/3 * (predictions1[0][0] + predictions2[0][0] + predictions3[0][0]))\n",
+    "CCFS[1] = 1 - (1/3 * (predictions1[0][1] + predictions2[0][1] + predictions3[0][1]))\n",
+    "CCFS[2] = 1 - (1/3 * (predictions1[0][2] + predictions2[0][2] + predictions3[0][2]))\n",
+    "\n",
+    "\n",
+    "CCFS\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.04203601838801842"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "FDS = np.zeros(3)\n",
+    "for i in range(len(FDS)):\n",
+    "    FDS[i] = FRS[i] * CCFS[i]\n",
+    "\n",
+    "FDS[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The image is predicted to be Malginant.\n"
+     ]
+    }
+   ],
+   "source": [
+    "min_index = 100000000\n",
+    "index = 5\n",
+    "for i in range(len(FDS)):\n",
+    "      # Get the index of the highest value in pred\n",
+    "      if min_index > FDS[i]:\n",
+    "          min_index = FDS[i]\n",
+    "          index = i\n",
+    "          \n",
+    "          \n",
+    "if index == 0:\n",
+    "    print(\"The image is predicted to be Bengin.\")\n",
+    "elif index == 1:\n",
+    "    print(\"The image is predicted to be Malginant.\")\n",
+    "elif index == 2:\n",
+    "    print(\"The image is predicted to be normal.\")"
    ]
   },
   {
