--- a/Fuzzy_ensemble_IQ_OTHNCCD.ipynb
+++ b/Fuzzy_ensemble_IQ_OTHNCCD.ipynb
@@ -504,10 +504,6 @@
         "\n",
         "\n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
         "def mobilenetv2(img_shape, n_classes):\n",
         "    mobilenet = MobileNetV2(input_shape=img_shape, include_top=False, weights='imagenet')\n",
         "    mobilenet.trainable = False\n",
@@ -521,8 +517,6 @@
         "\n",
         "    model = Model(input, output)\n",
         "    return model\n",
-        "\n",
-        "\n",
         "\n",
         "\n",
         "input_shape = (256, 256, 3)\n",
@@ -542,19 +536,6 @@
         "model3 = mobilenetv2(input_shape, n_classes)\n",
         "model3.compile('Adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
         "model3.summary()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 18,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "input_shape = (256, 256, 3)\n",
-        "n_classes = 3\n",
-        "\n",
-        "from keras.optimizers import SGD\n",
-        "opt = SGD(learning_rate=0.1)\n"
       ]
     },
     {
@@ -4597,8 +4578,7 @@
         "logdir='logs'\n",
         "tensorboard_callback3 = tf.keras.callbacks.TensorBoard(log_dir=logdir)\n",
         "hist3 = model3.fit(train, epochs=60, validation_data=val, callbacks=[tensorboard_callback3])\n",
-        "print(hist3.history)\n",
-        "\n"
+        "print(hist3.history)\n"
       ]
     },
     {
