--- a/Main.ipynb
+++ b/Main.ipynb
@@ -4835,6 +4835,36 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#@title Saving the Models and their Histories\n",
+        "\n",
+        "import pickle\n",
+        "\n",
+        "\n",
+        "# Saving the Models\n",
+        "\n",
+        "model1.save(os.path.join('models','imageclassifier1.keras'))\n",
+        "model2.save(os.path.join('models','imageclassifier2.keras'))\n",
+        "model3.save(os.path.join('models','imageclassifier3.keras'))\n",
+        "\n",
+        "\n",
+        "# Saving the Model Histories\n",
+        "logdir = 'logs'\n",
+        "with open(os.path.join(logdir+'/history1.pkl'), 'wb') as file:\n",
+        "    pickle.dump(hist1.history, file)\n",
+        "\n",
+        "with open(os.path.join(logdir+'/history2.pkl'), 'wb') as file:\n",
+        "    pickle.dump(hist2.history, file)\n",
+        "\n",
+        "with open(os.path.join(logdir+'/history3.pkl'), 'wb') as file:\n",
+        "    pickle.dump(hist3.history, file)"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 13,
       "metadata": {},
       "outputs": [
